# agent-based-modeling

./: .gitignore  CLAUDE.md  CMakeLists.txt  DOCUMENTATION.md  build_app.sh  main.cpp  readme.md
.claude/: launch.json
data/: README.md
data/input/: README.md
instruction_manual/: Agent_Walking_Pathfinding_Manual.docx  Programming_Agent_Workflow_Manual.docx  README.md  Textbox_Communication_Log_Manual.docx  Textbox_Manual.md  build_manual.js  build_textbox_manual.js
instruction_manual/generate/: README.md  build_chatbox_manual.js  build_manual.js  build_textbox_manual.js  build_textbox_manual.js.bak  build_workflow_manual.js  package-lock.json
map/: README.md  map_generator.py  mapgen_poc.ipynb
src/: Agent.cpp  Buttons.cpp  ChatBox.cpp  Env.cpp  MessageLog.cpp  Pathfinding.cpp  README.md  SettingsWindow.cpp  Statistics.cpp  System.cpp  TextRenderer.cpp
src/include/: Agent.h  Buttons.h  ChatBox.h  Env.h  MessageLog.h  Pathfinding.h  README.md  SettingsWindow.h  Statistics.h  System.h  TextRenderer.h
testcases/: README.md
testcases/cpp/: README.md
testcases/html/: README.md
testcases/html/textbox/: README.md  index.html
testcases/html/walking_behaviour/: README.md  index.html
testcases/pygame/: README.md
testcases/pygame/llm_control/: .gitignore  README.md  app.py  llm_manager.py  selftest.py  smoke_ui.py
testcases/sandbox/: README.md  build.sh  sandbox.cpp
testcases/sandbox/domain_extraction/: README.md  build_frontend.py  index.html  pathfind.py  segment.py
